# VoiceSummit

./: .env  .gitignore  AGENTS.md  README.md  pyproject.toml
data/: metadata.csv
src/voice_processing/: cli.py  config.py  llm_clients.py  storage.py  summarize.py  transcribe.py  watcher.py
src/voice_processing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_storage.py  test_transcribe_summarize.py  test_watcher.py
